unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Allow_timecard_with_negative_hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_timecard_with_negative_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Given config is used to control the saving/submiting of timecard with negative hours. If it is true, timecards with negative hours are saved/submited else not(warning will be shown on ui).</description>
    <label>Allow timecard with negative hours</label>
    <type>Checkbox</type>
</CustomField>