unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Assignment_load_limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_load_limit__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of Assignments to be loaded for the timecard assignment drop down</description>
    <inlineHelpText>Number of Assignments to be loaded for the timecard assignment drop down</inlineHelpText>
    <label>Assignment load limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>