unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Assignment_lookup_columns__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment_lookup_columns__c</fullName>
    <defaultValue>'Name,Nick_Name__c'</defaultValue>
    <description>List of API names of assignment fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Nick_Name__c.</description>
    <inlineHelpText>List of API names of assignment fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Nick_Name__c.</inlineHelpText>
    <label>Assignment lookup columns</label>
    <length>200</length>
    <type>Text</type>
</CustomField>