unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Assignments_load_date_restriction__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignments_load_date_restriction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Assignment start and end date restriction while loading the Assignments in the Timecard UI.  If true, only Assignments whose start/end dates either contain or overlap with the Timecard date range are loaded.  This affects the UI only, not Admin edit or manual/native Timecard creation.</description>
    <inlineHelpText>Assignment start and end date restriction while loading the Assignments in the Timecard UI.  If true, only Assignments whose start/end dates either contain or overlap with the Timecard date range are loaded.  This affects the UI only, not Admin edit.</inlineHelpText>
    <label>Assignments load date restriction</label>
    <type>Checkbox</type>
</CustomField>