unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Assignments_load_status_values__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignments_load_status_values__c</fullName>
    <defaultValue>"Tentative,Scheduled"</defaultValue>
    <description>List of assignment status values used to restrict which assignments can have timecards logged.</description>
    <inlineHelpText>List of assignment status values to be used while loading the assignments from db.</inlineHelpText>
    <label>Assignments Status Values</label>
    <length>250</length>
    <type>Text</type>
</CustomField>