unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Check_For_Previous_Week_Timecards__c.field-meta.xml
<CustomField>
    <fullName>pse__Check_For_Previous_Week_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true,  on initial load of  new Timecard UI it will check for previous week timecards. If there is no timecards filled for the previous week, UI will show confirmation window asking user to load previous week or current week.  If false, work as normal i.e no confirmation window and load current week.</description>
    <inlineHelpText>If true,  on initial load of  new Timecard UI it will check for previous week timecards. If there is no timecards filled for the previous week, UI will show confirmation window asking user to load previous week or current week.  If false, work as normal.</inlineHelpText>
    <label>Check For Previous Week Timecards</label>
    <type>Checkbox</type>
</CustomField>