unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Day_hour_auto_revert_floor__c.field-meta.xml
<CustomField>
    <fullName>pse__Day_hour_auto_revert_floor__c</fullName>
    <defaultValue>-24</defaultValue>
    <description>Config  to control min auto-revert hour value on the new TC UI.</description>
    <inlineHelpText>Config  to control min auto-revert hour value on the new TC UI.</inlineHelpText>
    <label>Day hour auto revert floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>