unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Enforce_submit_all_timecards__c.field-meta.xml
<CustomField>
    <fullName>pse__Enforce_submit_all_timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls the submission of timecards for approval. If true, all timecards are submitted. If false, only timecards that the user selects are submitted.</description>
    <inlineHelpText>If true, all timecards are submitted for approval. If false, only timecards that the user selects are submitted.</inlineHelpText>
    <label>Enforce Submit All Timecards</label>
    <type>Checkbox</type>
</CustomField>