unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Project_lookup_columns__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_lookup_columns__c</fullName>
    <defaultValue>'Name, Account__r.Name'</defaultValue>
    <description>List of API names of project fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Account__r.Name.</description>
    <inlineHelpText>List of API names of project fields to display as columns on the Project/Assignment  lookup in the enhanced  Time Entry page. Do not include the pse__ namespace prefix in the API name of a field. The default value is Name, Account__r.Name.</inlineHelpText>
    <label>Project lookup columns</label>
    <length>200</length>
    <type>Text</type>
</CustomField>