unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Project_Lookup_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Lookup_Fieldset_Name__c</fullName>
    <description>Defines the name of a field set containing project fields to display as columns in the Project/Assignment lookup on the Timecard Entry page.</description>
    <inlineHelpText>Defines the name of a field set containing project fields to display as columns in the Project/Assignment lookup on the Timecard Entry page.</inlineHelpText>
    <label>Project Lookup Fieldset Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>