unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Resource_access__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_access__c</fullName>
    <defaultValue>"all"</defaultValue>
    <description>If the config value equals 'all' , this means all of the resources will be loaded, that the current user has permission control access for, to log time. If the value equals 'resource' or null, only the current user resource will be loaded.</description>
    <inlineHelpText>If config value equals to 'all' , means all resources along with current user resources will be loaded. Else if value equals to 'resource' or null, only current user resources will be loaded.</inlineHelpText>
    <label>Resource access</label>
    <length>30</length>
    <type>Text</type>
</CustomField>