unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Resource_lookup_columns__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_lookup_columns__c</fullName>
    <defaultValue>'Name,Region__r.Name,Practice__r.Name,Group__r.Name'</defaultValue>
    <description>List of Resource fields (fully-qualified API names/paths) to display on columns for Resource lookup pop-up in new Timecard UI. Recommend at most 4 fields/columns. Default value: Name, Region__r.Name, Practice__r.Name, Group__r.Name</description>
    <inlineHelpText>List of Resource fields (fully-qualified API names/paths) to display on columns for Resource lookup pop-up in new Timecard UI. Recommend at most 4 fields/columns. Default value: Name, Region__r.Name, Practice__r.Name, Group__r.Name</inlineHelpText>
    <label>Resource lookup columns</label>
    <length>200</length>
    <type>Text</type>
</CustomField>