unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Resource_Lookup_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Lookup_Fieldset_Name__c</fullName>
    <description>Defines the name of a field set containing resource fields to display as columns in the Resource lookup on the Sencha Timecard Entry page.</description>
    <inlineHelpText>Defines the name of a field set containing resource fields to display as columns in the Resource lookup on the Sencha Timecard Entry page.</inlineHelpText>
    <label>Resource Lookup Fieldset Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>