unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Schedule_editable__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_editable__c</fullName>
    <defaultValue>"ALL"</defaultValue>
    <label>Schedule editable</label>
    <length>30</length>
    <type>Text</type>
</CustomField>