unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__TC_Entry_Save_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_Entry_Save_Batch_Size__c</fullName>
    <defaultValue>15</defaultValue>
    <description>The number of timecard records, not including related records, saved in a single request.</description>
    <inlineHelpText>The number of timecard records, not including related records, saved in a single request.</inlineHelpText>
    <label>Time Entry Save Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>