unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__TC_Sorted_By_Order__c.field-meta.xml
<CustomField>
    <fullName>pse__TC_Sorted_By_Order__c</fullName>
    <description>Config for holding the timecard sorted by order field API names. Multiple coma separated fields can be entered for sorting. Ex : CreatedDate, Project__r.Name</description>
    <inlineHelpText>Config for holding the timecard sorted by order fields API names. Multiple coma separated fields can be entered for sorting. Ex : CreatedDate, Project__r.Name</inlineHelpText>
    <label>TC Sorted By Order</label>
    <length>246</length>
    <type>Text</type>
</CustomField>