unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Timecard_edit_status_values__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_edit_status_values__c</fullName>
    <defaultValue>"saved"</defaultValue>
    <description>CSV List of status values for which the timecard entry rows can be edited.</description>
    <inlineHelpText>CSV List of status values for which the timecard entry rows can be edited.</inlineHelpText>
    <label>Timecard edit status values</label>
    <length>60</length>
    <type>Text</type>
</CustomField>