unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Timecard_save_button_action__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_save_button_action__c</fullName>
    <defaultValue>"Saved"</defaultValue>
    <description>Used to determines what status the timecards will be set to on save button click</description>
    <inlineHelpText>Used to determines what status the timecards will be set to on save button click</inlineHelpText>
    <label>Timecard save button action</label>
    <length>30</length>
    <type>Text</type>
</CustomField>