unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Use_Local_Storage_For_Column_Preferences__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Local_Storage_For_Column_Preferences__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected (true), Time Entry UI column preferences are saved locally. If deselected (false), the preferences are saved on the server.</description>
    <inlineHelpText>If selected (true), Time Entry UI column preferences are saved locally. If deselected (false), the preferences are saved on the server.</inlineHelpText>
    <label>Use Local Storage For Column Preferences</label>
    <type>Checkbox</type>
</CustomField>