unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Use_Project_Location_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Project_Location_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then Location drop-downs will bind to Project Location object instead of location picklists on TC UI</description>
    <inlineHelpText>If true, then Location drop-downs will bind to Project Location object instead of location picklists on TC UI</inlineHelpText>
    <label>Use Project Location Records</label>
    <type>Checkbox</type>
</CustomField>