unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Use_Project_Methodology_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Project_Methodology_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Project Methodology Records</label>
    <type>Checkbox</type>
</CustomField>