unpackaged/main/default/objects/pse__Timecard_Entry_UI_Global__c/fields/pse__Week_start_day__c.field-meta.xml
<CustomField>
    <fullName>pse__Week_start_day__c</fullName>
    <defaultValue>"Sunday"</defaultValue>
    <description>Default week start day value used when a resource does not have a work calendar, or has a work calendar without a week start day.c</description>
    <inlineHelpText>Default week start day value used when a resource does not have a work calendar, or has a work calendar without a week start day.</inlineHelpText>
    <label>Week start day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>